--- a/.github/workflows/main_linux-webapp-static-local-git.yml
+++ b/.github/workflows/main_linux-webapp-static-local-git.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}
+          path: ${{env.DOTNET_ROOT}}/
 
   deploy:
     runs-on: ubuntu-latest
